--- a/Pages/Authentication/Login.cshtml
+++ b/Pages/Authentication/Login.cshtml
@@ -34,7 +34,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
 
         </form>
-        <button  class="btn btn-primary"><a href="ResetPasswordOTP">Reset Password</a></button>
+        <button class="btn btn-primary"><a style="text-decoration:none; color:yellow" href="ResetPasswordOTP">Reset Password</a></button>
     </div>
     <div class="row contact">
         <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
