update header css

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -128,7 +128,7 @@
     </div>   
 </body>
 </html>
-<link href="~/css/authentication/homepage.css" rel="stylesheet" />
+<link href="~/css/home.css" rel="stylesheet" />
 <script>
     // Optional: If you want to stop the rotation on hover
     var img = document.querySelector('.imgbranch');
