--- a/Pages/Order/ListOrderDetail.cshtml
+++ b/Pages/Order/ListOrderDetail.cshtml
@@ -44,7 +44,6 @@
             font-weight: bold;
         }
 </style>
-
 <div style="background-color:whitesmoke">
     <table class="order-table">
         <thead>
@@ -147,6 +146,23 @@
             }
         </tbody>
     </table>
-
-
 </div>
+<div class="row contact mt-5">
+    @*         <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
+    <h3>CONTACT</h3>
+    </div> *@
+    <div class="col-md-6 contacttext">
+        <p>FPT University Hoa Lac Campus, Thach That, Ha Noi</p>
+        <p>Email: info@restaurant.com</p>
+        <p>Phone: +1-123-456-7890</p>
+        <p>&copy; 2023 Restaurant Management</p>
+    </div>
+    <div class="col-md-6 contactimg">
+        <div>
+            <a href="https://www.facebook.com"><img src="~/css/fb.png" alt="Logo"></a>
+            <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/google.png" alt="Logo"></a>
+            <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/twitter.png" alt="Logo"></a>
+        </div>
+    </div>
+</div>
+<link href="~/css/authentication/loginregister.css" rel="stylesheet" />
