--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -71,4 +71,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-<link href="~/css/Layout.css" rel="stylesheet" />
+<link href="~/css/_Layout.css" rel="stylesheet" />
