--- a/wwwroot/css/FoodandCategory/Create.css
+++ b/wwwroot/css/FoodandCategory/Create.css
@@ -29,6 +29,7 @@
     margin-right: 200px;
     border: 1px solid #fb2e00;
     border-radius: 10px;
+    background-color: #fff6da;
 }
 
 .btncrud {
