--- a/wwwroot/css/FoodandCategory/Index.css
+++ b/wwwroot/css/FoodandCategory/Index.css
@@ -16,9 +16,9 @@
     font-size:30px;
 }
 .table {
-    background-color: #ffe8a4;
+    background-color: #fff6da;
     border: 2px solid red;
-    font-weight:bold;
+    font-weight: bold;
 }
 .theadtable {
     background-color: #fb2e00;
