--- a/Pages/Authentication/Login.cshtml
+++ b/Pages/Authentication/Login.cshtml
@@ -31,10 +31,9 @@
             <h1 style="color:red">@Model.message</h1>
 
             
-            <button type="submit" class="btn btn-primary">Login</button>
-
-        </form>
-        <button class="btn btn-primary"><a style="text-decoration:none; color:yellow" href="ResetPasswordOTP">Reset Password</a></button>
+            <button type="submit" class="btn">Login</button>
+            <button class="btn"><a style="text-decoration:none; color:yellow" href="ResetPasswordOTP">Reset Password</a></button>
+        </form>      
     </div>
     <div class="row contact">
         <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
@@ -56,5 +55,5 @@
     </div>
 </body>
 </html>
-<link href="~/css/authentication/loginandregister.css" rel="stylesheet" />
+<link href="~/css/authentication/loginregister.css" rel="stylesheet" />
 
