--- a/Pages/Authentication/MailConfirm.cshtml
+++ b/Pages/Authentication/MailConfirm.cshtml
@@ -7,56 +7,37 @@
 }
 
 
-
-<head>
-
-    <style>
-        body {
-            background-color: #D4D4D4;
-        }
-
-        .login-form {
-            width: 500px;
-            margin: 15vh auto;
-            padding: 60px;
-            background-color: white;
-            border: 1px solid #CCC;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-        }
-
-            .login-form input {
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 10px;
-                border: 1px solid #CCC;
-                border-radius: 3px;
-            }
-
-            .login-form button {
-                width: 100%;
-                background-color: #444;
-                color: white;
-                padding: 10px;
-                margin-top: 10px;
-                border: none;
-                border-radius: 3px;
-                cursor: pointer;
-            }
-    </style>
-</head>
 <body>
     <div class="login-form">
-        <h1>Register</h1>
+        <h3 class="menutext">Enter your Email</h3>
         <form method="post">
             <div class="form-group">
-                <label for="Email">Email:</label>
+                @* <label for="Email">Email:</label> *@
                 <input type="email" class="form-control" id="Email" name="Email" />
-            </div> 
+            </div>
             <h3 style="color:red">@Model.message</h3>
-            <button type="submit" class="btn btn-primary">Send OTP</button>
+            <button type="submit" class="btn">Send OTP</button>
         </form>
     </div>
+    <div class="row contact">
+        <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
+            <h2>CONTACT</h2>
+        </div>
+        <div class="col-md-6 contacttext">
+            <p>FPT University Hoa Lac Campus, Thach That, Ha Noi</p>
+            <p>Email: info@restaurant.com</p>
+            <p>Phone: +1-123-456-7890</p>
+            <p>&copy; 2023 Restaurant Management</p>
+        </div>
+        <div class="col-md-6 contactimg">
+            <div>
+                <a href="https://www.facebook.com"><img src="~/css/fb.png" alt="Logo"></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/google.png" alt="Logo"></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/twitter.png" alt="Logo"></a>
+            </div>
+        </div>
+    </div>
 </body>
+<link href="~/css/authentication/loginregister.css" rel="stylesheet" />
 
 
