--- a/Pages/FoodManager/Create.cshtml
+++ b/Pages/FoodManager/Create.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="col-md">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Food.Name" class="control-label"></label>
@@ -33,6 +33,10 @@
                 <div class="form-group">
                     <label class="control-label">Category Name</label>
                     <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Food.Image" class="control-label"></label>
+                    <input class="form-control-file" type="file" name="image" />
                 </div>
                 <div class="btncrud">
                     <div class="form-group">
