--- a/Pages/FoodManager/Edit.cshtml
+++ b/Pages/FoodManager/Edit.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
         <div class="col-md">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Food.Id" />
                 <div class="form-group">
@@ -34,6 +34,14 @@
                     <label class="control-label">Category Name</label>
                     <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
                     <span asp-validation-for="Food.Category.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Food.Image" class="control-label"></label>
+                    <img src="@ViewData["Img"]" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Food.Image" class="control-label"></label>
+                    <input class="form-control-file" type="file" name="image" />
                 </div>
                 <div class="btncrud">
                     <div class="form-group">
