--- a/Pages/FoodManager/Details.cshtml
+++ b/Pages/FoodManager/Details.cshtml
@@ -24,7 +24,7 @@
 				</tr>
 			</thead>
 			<tr class="tbodyfood">
-				<td><img src="@Html.DisplayFor(model => model.Food.Image)" /></td>
+				<td><img style="height:200px" src="@Html.DisplayFor(model => model.Food.Image)" /></td>
 
 				<td>@Html.DisplayFor(model => model.Food.Name)</td>
 
