--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -76,55 +76,60 @@
     </div>
     <div class="container feedback">
         <div class="row">
-            <div class="col-md-12 textfeedback mt-5 mb-5 d-flex justify-content-center text-danger">
-                <h2>FEEDBACK</h2>
+            <div class="headercontact col-md-12 textfeedback d-flex justify-content-center text-danger">
+                <a></a>
+                <h2 class="me-5 ms-5">FEED BACK</h2>
+                <a></a>
             </div>
-            <div class="col-md-4 fb">
-                <p>
-                    Messi có dịp ghé Restaurant vào một dịp trời thu Hà Nội. Ăn một lần mà rất nhớ vị lẩu ở đây, có gì đó khác so với các nhà hàng buffet mình đã từng ăn. Nếu có dịp quay lại Hà Nội, chắc chắn mình sẽ lại ghé qua lần nữa .
-                    Mọi người cứ đến ăn để trải nghiệm như Messi nhé.
-                </p>
-                <div class="imgfb">
-                    <img src="https://media.bongda.com.vn/files/hai.phan/2018/11/17/s1-1902.jpg" class="imgfb1" />
+            <div class="row fbrow d-flex justify-content-center">
+                <div class="col-md-4 fb">
+                    <p>
+                        Messi có dịp ghé Restaurant vào một dịp trời thu Hà Nội. Ăn một lần mà rất nhớ vị lẩu ở đây. Mọi người cứ đến ăn để trải nghiệm như Messi nhé.
+                    </p>
+                    <div class="imgfb">
+                        <img src="https://media.bongda.com.vn/files/hai.phan/2018/11/17/s1-1902.jpg" class="imgfb1" />
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4 fb">
-                <p>
-                    Restaurant là nhà hàng mình thấy đặc biệt ngon và phù hợp với các bạn trẻ. Mọi người cứ thử đến ăn Lẩu Wang để trải nghiệm nhé. Ronaldo nghiện Lẩu Wang mất rồi. Chắc chắn sẽ còn đến đây nhiều lần đấy !
-                    khám phá món mới cùng Ronaldo
-                </p>  
-                <div class="imgfb">
-                    <img src="https://media-cdn-v2.laodong.vn/Storage/NewsPortal/2021/9/13/953112/Ronaldo-Meal-1.jpg" class="imgfb1" />
+                <div class="col-md-4 fb">
+                    <p>
+                        Restaurant là nhà hàng mình thấy đặc biệt ngon và phù hợp với các bạn trẻ. Khám phá món mới cùng Ronaldo
+                    </p>
+                    <div class="imgfb">
+                        <img src="https://media-cdn-v2.laodong.vn/Storage/NewsPortal/2021/9/13/953112/Ronaldo-Meal-1.jpg" class="imgfb1" />
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4 fb">
-                <p>
-                    Naymar thực sự hài lòng về đồ ăn tại Restaurant. Nhiều đồ ăn tươi ngon giá cả lại hợp lý với hầu hết các bạn trẻ. Khi nào có liên hoan đông người chắc chắn Quỳnh sẽ rủ bạn bè đến đây. Hi vọng nhà hàng sẽ phát triển hơn nữa. Nhiều bạn đến đây sẽ thích cho xem.
-                    Neymar đã ăn tại đây
-                </p>   
-                <div class="imgfb">
-                    <img src="https://64.media.tumblr.com/81bf0d05bcf1945882c7c35e1dd6ba5a/tumblr_p5tpyspOG81tgrk4vo1_640.jpg" class="imgfb1" />
+                <div class="col-md-4 fb">
+                    <p>
+                        Neymar thực sự hài lòng về đồ ăn tại Restaurant. Nhiều bạn đến đây sẽ thích cho xem.Neymar đã ăn tại đây
+                    </p>
+                    <div class="imgfb">
+                        <img src="https://64.media.tumblr.com/81bf0d05bcf1945882c7c35e1dd6ba5a/tumblr_p5tpyspOG81tgrk4vo1_640.jpg" class="imgfb1" />
+                    </div>
                 </div>
-            </div>
+            </div>          
         </div>
     </div>
     <div class="row contact">
-        <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
-            <h2>CONTACT</h2>
+        <div class="headercontact col-md-12 textfeedback d-flex justify-content-center text-danger">
+            <a></a>
+            <h2 class="me-5 ms-5">CONTACT</h2>
+            <a></a>
         </div>
-        <div class="col-md-6 contacttext">
-            <p>FPT University Hoa Lac Campus, Thach That, Ha Noi</p>
-            <p>Email: info@restaurant.com</p>
-            <p>Phone: +1-123-456-7890</p>
-            <p>&copy; 2023 Restaurant Management</p>
-        </div>
-        <div class="col-md-6 contactimg">
-            <div>
-                <a href="https://www.facebook.com"><img src="~/css/fb.png" alt="Logo"></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/google.png" alt="Logo"></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/twitter.png" alt="Logo"></a>
-            </div>          
-        </div>
+        <div class="row contactinfo">
+            <div class="col-md-6 contacttext">
+                <p>FPT University Hoa Lac Campus, Thach That, Ha Noi</p>
+                <p>Email: info@restaurant.com</p>
+                <p>Phone: +1-123-456-7890</p>
+                <p>&copy; 2023 Restaurant Management</p>
+            </div>
+            <div class="col-md-6 contactimg">
+                <div>
+                    <a href="https://www.facebook.com"><img src="~/css/fb.png" alt="Logo"></a>
+                    <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/google.png" alt="Logo"></a>
+                    <a href="https://mail.google.com/mail/u/0/#inbox"><img src="~/css/twitter.png" alt="Logo"></a>
+                </div>
+            </div>
+        </div>     
     </div>   
 </body>
 </html>
