--- a/wwwroot/css/Home.css
+++ b/wwwroot/css/Home.css
@@ -75,6 +75,10 @@
 .feedback {
     margin-bottom: 130px;
 }
+.fbrow{
+    /*background-color:aqua;*/
+    margin-left:4px;
+}
 
 .textfeedback {
     /*background-color: red;*/
@@ -82,8 +86,13 @@
 }
 
 .fb {
-    border-right: 1px solid red;
-    padding-right: 10px;
+    width: 30%;
+    margin: 20px;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    background-color: #fff6da;
 }
 
     .fb p {
@@ -100,17 +109,29 @@
     width: 40%;
     border-radius: 10px;
 }
-
+.contactinfo {
+    /*background-color: red;*/
+}
+.headercontact{
+    /*background-color:yellow;*/
+    display: flex;
+    align-items:center;
+}
+    .headercontact a {
+        border-bottom: 1px solid red; /* Dấu sẽ là đường line */
+        width: 500px; /* Điều chỉnh chiều dài theo mong muốn */      
+    }
 .contacttext {
     text-align: center;
-    border-right: 1px solid red;
     font-weight: bold;
+    /*background-color: pink;*/
 }
 
 .contactimg {
     display: flex;
     justify-content: center;
     align-items: center;
+    /*background-color: aqua;*/
 }
 
     .contactimg img {
