--- a/Pages/FoodManager/Edit.cshtml
+++ b/Pages/FoodManager/Edit.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Food.Image" class="control-label"></label>
-                    <img src="@ViewData["Img"]" />
+                    <img style="height:200px" src="@ViewData["Img"]" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Food.Image" class="control-label"></label>
